--- a/ansible/roles/nomad_run_job/tasks/main.yml
+++ b/ansible/roles/nomad_run_job/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 
 - name: plan nomad job
-  shell: /usr/local/bin/nomad plan /usr/local/nomad-demo/job/{{job}}.{{version}}.nomad
+  shell: /usr/local/bin/nomad plan {{deploy_dir}}/job.nomad
   register: plan_result
   failed_when: plan_result.rc != 0 and plan_result.rc != 1
 
 - name: run nomad job
-  shell: /usr/local/bin/nomad run /usr/local/nomad-demo/job/{{job}}.{{version}}.nomad
+  shell: /usr/local/bin/nomad run {{deploy_dir}}/job.nomad
